# flask-cookiecutter

./: .gitignore  .gitlab-ci.yml  Containerfile  Dockerfile  gunicorn.conf.py  openapi.json  pyproject.toml  readme.md  sonar-project.properties
.github/: setup_template.sh
.github/workflows/: build-container.yaml  check.yaml  setup_template.yaml  setup_template.yml  sonar-main.yaml
app/: app.py  config.toml
app/api/: __init__.py
app/api/example/: __init__.py
app/api/example/v1/: __init__.py  blueprint.py
app/pages/: __index__.py  blueprint.py
app/static/: manifest.json
app/static/css/: style.css
app/static/js/: sw.js
app/static/sass/: footer.scss  header.scss  layout.scss  main.scss  nav.scss  style.scss
app/templates/components/: footer.html  header.html  nav.html  page_shell.html
app/templates/pages/: 404.html  error.html  index.html  offline.html
app/utils/: random.py
application_name/: app.py
application_name/static/css/: style.scss.css.map
application_name/static/js/: register-sw.js
application_name/static/sass/: header.scss
application_name/templates/components/: nav.html
manifest/: values.yaml
manifests/: live-env.yaml
project_name/: app.py  database.py  models.py
project_name/api/example/: __init__.py
project_name/api/example/v1/: __init__.py  blueprint.py
project_name/pages/: __init__.py  blueprint.py  readme.md
project_name/pages/templates/: readme.md
project_name/pages/templates/components/: footer.html  page_shell.html
project_name/pages/templates/pages/: 404.html
project_name/static/css/: style.css  style.scss.css
project_name/static/sass/: footer.scss  header.scss  layout.scss  main.scss  nav.scss  style.scss
project_name/templates/components/: header.html  nav.html  page_shell.html
project_name/templates/pages/: example_page.html
project_templates/: readme.md
scripts/: build_sass.py  cli_seal_secrets.sh  docker_seal_secrets.sh  seal_secrets.sh
tests/: conftest.py  test_app.py  test_errors.py  test_home.py  test_page.py  test_pwa.py  test_wsgi.py
tests/api/example/v1/: test_api.py
