[tool.poetry]
packages = [{ include = "app" }]
name = "project_name"
version = "0.1"
description = "project_description"
authors = ["cbradford@uidaho.edu"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">3.9"
flask = "^3.1.0"
flask-smorest = "^0.45.0"
gunicorn = "^23.0.0"
pyyaml = "^6.0.2"
libsass = "^0.23.0"
setuptools = "^75.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
black = "^24.10.0"

[tool.coverage.run]
source = ["project_name"]
omit = ["/project_name/static/*", "/project_name/templates/*"]

[tool.coverage.report]
fail_under = 95
