[tool.poetry]
packages = [{ include = "project_name" }]
name = "project_name"
version = "0.1"
description = "project_description"
authors = ["cbradford@uidaho.edu"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.1.0"
flask-smorest = "^0.45.0"
gunicorn = "^23.0.0"
pyyaml = "^6.0.2"
setuptools = "^75.8.0"
flask-sqlalchemy = "^3.1.1"
bootstrap-flask = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
tox = "^4.23.2"
mypy = "^1.14.1"
libsass = "^0.23.0"
pytest-sugar = "^1.0.0"
ruff = "^0.9.1"
mock-alchemy = "^0.2.6"

[tool.coverage.run]
source = ["project_name"]
omit = ["/project_name/static/*", "/project_name/templates/*"]

[tool.coverage.report]
fail_under = 95

[tool.tox]
requires = ["tox>=4.23.2"]
env_list = ["format", "sass", "lint", "type", "3.13"]

[tool.tox.env.format]
description = "Format the code with Ruff"
deps = ["ruff>=0.9.1"]
skip_install = true
commands = [["ruff", "format"]]

[tool.tox.env.lint]
description = "Lint the code with Ruff"
deps = ["ruff>=0.9.1"]
skip_install = true
commands = [["ruff", "check"]]

[tool.tox.env.sass]
description = "Compile the CSS with libcss"
deps = ["libsass>=0.23.0"]
skip_install = true
commands = [["python", "scripts/build_sass.py"]]

[tool.tox.env.type]
description = "Analyze the code with mypy"
deps = ["mypy>=1.14.1"]
commands = [["mypy", "project_name"]]

[tool.tox.env.3.13]
deps = ["pytest>=7", "pytest-sugar", "libsass", "mock-alchemy"]
commands = [["pytest", "tests", "{posargs}"]]
description = "Install pytest in a virtual environment and invoke it on the tests folder"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.13"
strict_optional = false

[tool.tox.gh.python]
"3.13" = ["3.13", "format", "lint", "mypy"]
